; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_server.c_server_IsSet.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_server.c_server_IsSet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fdescriptor = type { i32 }
%struct.server = type { i64 }
%struct.prompt = type { i32, %struct.prompt* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fdescriptor*, i32*)* @server_IsSet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @server_IsSet(%struct.fdescriptor* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.fdescriptor*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.server*, align 8
  %7 = alloca %struct.prompt*, align 8
  store %struct.fdescriptor* %0, %struct.fdescriptor** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load %struct.fdescriptor*, %struct.fdescriptor** %4, align 8
  %9 = call %struct.server* @descriptor2server(%struct.fdescriptor* %8)
  store %struct.server* %9, %struct.server** %6, align 8
  %10 = load %struct.server*, %struct.server** %6, align 8
  %11 = getelementptr inbounds %struct.server, %struct.server* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp sge i64 %12, 0
  br i1 %13, label %14, label %22

14:                                               ; preds = %2
  %15 = load %struct.server*, %struct.server** %6, align 8
  %16 = getelementptr inbounds %struct.server, %struct.server* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = call i64 @FD_ISSET(i64 %17, i32* %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %14
  store i32 1, i32* %3, align 4
  br label %40

22:                                               ; preds = %14, %2
  %23 = call %struct.prompt* (...) @log_PromptList()
  store %struct.prompt* %23, %struct.prompt** %7, align 8
  br label %24

24:                                               ; preds = %35, %22
  %25 = load %struct.prompt*, %struct.prompt** %7, align 8
  %26 = icmp ne %struct.prompt* %25, null
  br i1 %26, label %27, label %39

27:                                               ; preds = %24
  %28 = load %struct.prompt*, %struct.prompt** %7, align 8
  %29 = getelementptr inbounds %struct.prompt, %struct.prompt* %28, i32 0, i32 0
  %30 = load i32*, i32** %5, align 8
  %31 = call i64 @descriptor_IsSet(i32* %29, i32* %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %27
  store i32 1, i32* %3, align 4
  br label %40

34:                                               ; preds = %27
  br label %35

35:                                               ; preds = %34
  %36 = load %struct.prompt*, %struct.prompt** %7, align 8
  %37 = getelementptr inbounds %struct.prompt, %struct.prompt* %36, i32 0, i32 1
  %38 = load %struct.prompt*, %struct.prompt** %37, align 8
  store %struct.prompt* %38, %struct.prompt** %7, align 8
  br label %24

39:                                               ; preds = %24
  store i32 0, i32* %3, align 4
  br label %40

40:                                               ; preds = %39, %33, %21
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local %struct.server* @descriptor2server(%struct.fdescriptor*) #1

declare dso_local i64 @FD_ISSET(i64, i32*) #1

declare dso_local %struct.prompt* @log_PromptList(...) #1

declare dso_local i64 @descriptor_IsSet(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
